@@ -160,7 +160,7 @@ this mode. The single argument is the window to be placed."
     (let ((dims (window-frame-dimensions w))
 	  (h-dims (current-head-dimensions))
 	  (h-off (current-head-offset))
-	  (screen (maximize-find-workarea w)))
+	  (screen (maximize-find-workarea w #:head-fallback t)))
       (move-window-to w
 		      (clamp* (+ (car h-off)
 				 (quotient (- (car h-dims) (car dims)) 2))
@@ -182,7 +182,7 @@ this mode. The single argument is the window to be placed."
 	(let ((dims (window-frame-dimensions w))
 	      (pdims (window-frame-dimensions parent))
 	      (coords (window-position parent))
-	      (screen (maximize-find-workarea w)))
+	      (screen (maximize-find-workarea w #:head-fallback t)))
 	  (rplaca coords (clamp* (+ (car coords)
 				    (quotient (- (car pdims) (car dims)) 2))
 				 (car dims) (nth 0 screen) (nth 2 screen)))
@@ -194,7 +194,8 @@ this mode. The single argument is the window to be placed."
   (define (place-window-under-pointer w)
     (let ((dims (window-frame-dimensions w))
 	  (coords (query-pointer))
-	  (screen (maximize-find-workarea w #:head (pointer-head))))
+	  (screen (maximize-find-workarea w #:head (pointer-head)
+					  #:head-fallback t)))
       (rplaca coords (clamp* (- (car coords) (quotient (car dims) 2))
 			     (car dims) (nth 0 screen) (nth 2 screen)))
       (rplacd coords (clamp* (- (cdr coords) (quotient (cdr dims) 2))
