@@ -1,3 +1,14 @@
+2002-03-03  John Harper  <jsh@pixelslut.com>
+
+	* sawfish/wm/placement/off-center.jl (workarea-for): replaced
+	by a single call to maximize-find-workarea
+
+	* sawfish/wm/placement.jl: added `#:head-fallback t' in some
+	calls to maximize-find-workarea. Should fix #73297
+
+	* sawfish/wm/state/maximize.jl (maximize-find-workarea):
+	removed extra #!key token
+
 2002-02-22  John Harper  <jsh@pixelslut.com>
 
 	* sawfish/wm/viewport.jl (viewport-load-state): add the current
